--- a/ansible/roles/www/templates/nginx.j2
+++ b/ansible/roles/www/templates/nginx.j2
@@ -18,9 +18,11 @@ server {
     ssl_certificate_key {{ www.cert_root }}/privkey.pem;
     ssl_trusted_certificate {{ www.cert_root }}/chain.pem;
 
-    root {{ www.root }};
+    root {{ www.project_root }}/www;
     index index.html;
     ssi on;
+
+    set $group_address "{{ group_address }}";
 
     location ~ /\. {
         deny all;
