--- a/ansible/roles/www/templates/nginx.j2
+++ b/ansible/roles/www/templates/nginx.j2
@@ -1,5 +1,6 @@
 server {
-    listen 80 default_server;
+    server_name {{ www.domain }};
+    listen 80;
 
     location / {
         return 301 https://$host$request_uri;
